--- a/i18n/en/strings.xml
+++ b/i18n/en/strings.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
 	<string name="welcome">Welcome to %s!</string>
+	<string name="home">home</string>
+	<string name="config">config</string>
+	<string name="shop">shop</string>
+	<string name="zukan">zukan</string>	
 </resources>
